feat: added header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,111 @@
     <title>Neon - codeboost</title>
   </head>
   <body>
-    <p class="text-9xl text-brand-light-blue">neon</p>
+    <header class="absolute top-0 left-0 w-full h-[8.8rem] flex bg-[#0073CE]">
+      <div class="container flex flex-row items-center justify-between">
+        <a href="" class="logo">
+          <img src="./src/assets/img/logo.svg" alt="" />
+        </a>
+        <nav class="flex items-center">
+          <ul class="flex items-center gap-12 mr-[60px]">
+            <li>
+              <a
+                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                href=""
+                >Produtos</a
+              >
+            </li>
+
+            <li>
+              <a
+                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                href=""
+                >Conta digital PJ</a
+              >
+            </li>
+
+            <li>
+              <a
+                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                href=""
+              >
+                Quem somos
+              </a>
+            </li>
+
+            <li>
+              <a
+                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                href=""
+                >Blog</a
+              >
+            </li>
+
+            <li>
+              <a
+                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                href=""
+                >Ajuda</a
+              >
+            </li>
+          </ul>
+          <button
+            class="inline-block leading-[4.8rem] bg-transparent hover:bg-white border-[1px] border-solid border-white transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-white hover:text-brand-green-light"
+          >
+            Abra sua conta digital
+          </button>
+        </nav>
+      </div>
+    </header>
+
+    <!-- <h1
+      class="font-Poppins text-brand-grey-5 -tracking-[1px] leading-[112%] font-semibold text-[6.4rem]"
+    >
+      Heading h1
+    </h1>
+    <h2
+      class="font-Poppins text-brand-grey-5 -tracking-[1px] leading-[112%] font-bold text-[4rem]"
+    >
+      Heading h2
+    </h2>
+    <h3
+      class="font-Poppins text-brand-grey-5 font-medium text-4xl leading-[150%] -tracking-[0.5px]"
+    >
+      Heading h3
+    </h3>
+    <h4
+      class="font-Poppins text-brand-grey-5 font-medium text-2xl leading-[112%] -tracking-[0.5px]"
+    >
+      Heading h4
+    </h4> -->
+    <!-- <div>
+      <div
+        class="w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+      >
+        <div class="flex items-center justify-between mb-[2.1rem]">
+          <strong
+            class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+            >@matheusguedes</strong
+          >
+          <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+        </div>
+        <p class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4">
+          Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+          #bancoNeon
+        </p>
+      </div>
+
+      <button
+        class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+      >
+        Abra sua conta digital
+      </button>
+      <button
+        class="inline-block leading-[4.8rem] bg-white hover:bg-brand-light-blue border-[1px] border-solid border-brand-light-blue transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-brand-light-blue hover:text-white"
+      >
+        Abra sua conta digital
+      </button>
+      
+    </div> -->
   </body>
 </html>
