--- a/index.html
+++ b/index.html
@@ -156,6 +156,57 @@
         </div>
       </div>
     </section>
+
+    <section class="pt-32">
+      <div class="container">
+        <div class="w-full max-w-[277px]">
+          <div class="w-full max-w-[277px] relative mb-44">
+            <img
+              class="absolute -z-10 -left-[214px] top-[88px] max-w-[377px]"
+              src="./src/assets/img/circle-mockup.svg"
+              alt=""
+            />
+            <img
+              class="drop-shadow-2xl"
+              src="./src/assets/img/mockup.svg"
+              alt=""
+            />
+          </div>
+          <div class="w-full flex flex-col items-center">
+            <div
+              class="before:content-point before:absolute before:w-1 before:h-20 before:-top-[104px] before:left-[50%] before:-ml-1 relative"
+            >
+              <img src="./src/assets/img/icon-neon.svg" alt="" />
+            </div>
+            <div class="flex flex-col items-center">
+              <h3
+                class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+              >
+                Baixe nosso app
+              </h3>
+              <p
+                class="text-2xl text-brand-grey-4 opacity-70 mb-6 leading-[150%] text-center"
+              >
+                Que tal abrir uma conta digital para ver como a gente faz a sua
+                vida muito mais simples?
+              </p>
+              <ul>
+                <li class="mb-6">
+                  <a href="" target="_blank">
+                    <img src="./src/assets/img/apple-store.svg" alt="" />
+                  </a>
+                </li>
+                <li>
+                  <a href="" target="_blank">
+                    <img src="./src/assets/img/google-play.svg" alt="" />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- <h1
       
     >
