feat: added second card

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </section>
 
     <section class="pt-32">
-      <div class="container">
+      <div class="container flex flex-row items-start justify-between">
         <div class="w-full max-w-[277px]">
           <div class="w-full max-w-[277px] relative mb-44">
             <img
@@ -203,6 +203,70 @@
                 </li>
               </ul>
             </div>
+          </div>
+        </div>
+        <div class="w-full max-w-[800px]">
+          <div>
+            <h2
+              class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem] max-w-[488px] mb-12"
+            >
+              Resolva sua vida direto pelo app Neon!
+            </h2>
+            <ul class="w-full">
+              <li
+                class="border-t-0 border-r-0 border-l-0 border-solid border-b border-indigo-500 w-full"
+              >
+                <div class="">
+                  <img src="./src/assets/img/icon-cartao-credito.svg" alt="" />
+                  <div>
+                    <h3
+                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                    >
+                      Cartão de crédito sem anuidade
+                    </h3>
+                    <p>
+                      Conta digital com cartão de crédito sem anuidade e sem
+                      complicação
+                    </p>
+                  </div>
+                  <img src="./src/assets/img/arrow-right.svg" alt="" />
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img src="./src/assets/img/icon-taxas.svg" alt="" />
+                  <div>
+                    <h3
+                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                    >
+                      Sem taxas
+                    </h3>
+                    <p>
+                      Transferências, boletos de depósito e outros serviços
+                      gratuitos
+                    </p>
+                  </div>
+                  <img src="./src/assets/img/arrow-right.svg" alt="" />
+                </div>
+              </li>
+              <li>
+                <div>
+                  <img src="./src/assets/img/icon-investimentos.svg" alt="" />
+                  <div>
+                    <h3
+                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                    >
+                      Mais investimentos
+                    </h3>
+                    <p>
+                      Rendem mais que a poupança e você resgata quando quiser
+                    </p>
+                  </div>
+                  <img src="./src/assets/img/arrow-right.svg" alt="" />
+                </div>
+              </li>
+            </ul>
+            <a href="">Conheça outros produtos</a>
           </div>
         </div>
       </div>
