--- a/index.html
+++ b/index.html
@@ -212,58 +212,62 @@
             >
               Resolva sua vida direto pelo app Neon!
             </h2>
-            <ul class="w-full">
+            <ul>
               <li
-                class="border-t-0 border-r-0 border-l-0 border-solid border-b border-indigo-500 w-full"
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full pb-8 px-0"
               >
-                <div class="">
+                <div class="flex items-center justify-center">
                   <img src="./src/assets/img/icon-cartao-credito.svg" alt="" />
-                  <div>
+                  <div class="ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
                     >
                       Cartão de crédito sem anuidade
                     </h3>
-                    <p>
+                    <p class="leading-[150%] text-[#7A7786] text-2xl">
                       Conta digital com cartão de crédito sem anuidade e sem
                       complicação
                     </p>
                   </div>
-                  <img src="./src/assets/img/arrow-right.svg" alt="" />
                 </div>
+                <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
-              <li>
-                <div>
+              <li
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-8 px-0"
+              >
+                <div class="flex items-center">
                   <img src="./src/assets/img/icon-taxas.svg" alt="" />
-                  <div>
+                  <div class="ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
                     >
                       Sem taxas
                     </h3>
-                    <p>
+                    <p class="leading-[150%] text-[#7A7786] text-2xl">
                       Transferências, boletos de depósito e outros serviços
                       gratuitos
                     </p>
                   </div>
-                  <img src="./src/assets/img/arrow-right.svg" alt="" />
                 </div>
+                <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
-              <li>
-                <div>
+              <li
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-8 px-0"
+              >
+                <div class="flex items-center">
                   <img src="./src/assets/img/icon-investimentos.svg" alt="" />
-                  <div>
+                  <div class="ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
                     >
                       Mais investimentos
                     </h3>
-                    <p>
+                    <p class="leading-[150%] text-[#7A7786] text-2xl">
                       Rendem mais que a poupança e você resgata quando quiser
                     </p>
                   </div>
-                  <img src="./src/assets/img/arrow-right.svg" alt="" />
                 </div>
+                <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
             </ul>
             <a href="">Conheça outros produtos</a>
