feat: ended card benefits

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             >
               Resolva sua vida direto pelo app Neon!
             </h2>
-            <ul>
+            <ul class="mb-9">
               <li
                 class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full pb-8 px-0"
               >
@@ -224,7 +224,7 @@
                     >
                       Cartão de crédito sem anuidade
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-2xl">
+                    <p class="leading-[150%] text-[#7A7786] text-3xl">
                       Conta digital com cartão de crédito sem anuidade e sem
                       complicação
                     </p>
@@ -243,7 +243,7 @@
                     >
                       Sem taxas
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-2xl">
+                    <p class="leading-[150%] text-[#7A7786] text-3xl">
                       Transferências, boletos de depósito e outros serviços
                       gratuitos
                     </p>
@@ -262,7 +262,7 @@
                     >
                       Mais investimentos
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-2xl">
+                    <p class="leading-[150%] text-[#7A7786] text-3xl">
                       Rendem mais que a poupança e você resgata quando quiser
                     </p>
                   </div>
@@ -270,7 +270,11 @@
                 <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
             </ul>
-            <a href="">Conheça outros produtos</a>
+            <a
+              class="inline-block font-poppins font-medium text-3xl leading-[112%] -tracking-[0.5px] text-brand-blue"
+              href=""
+              >Conheça outros produtos</a
+            >
           </div>
         </div>
       </div>
