feat: ended card neon

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           </div>
         </div>
         <div class="w-full max-w-[800px]">
-          <div>
+          <div class="mb-[174px]">
             <h2
               class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem] max-w-[488px] mb-12"
             >
@@ -275,6 +275,43 @@
               href=""
               >Conheça outros produtos</a
             >
+          </div>
+          <div
+            class="w-full h-[410px] bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-center rounded-xl flex items-center justify-between pl-[59px]"
+          >
+            <div class="w-full max-w-[380px]">
+              <h2
+                class="font-Poppins text-white -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-3"
+              >
+                Neon Pejota
+              </h2>
+              <h3
+                class="font-Poppins text-white font-medium text-4xl leading-[150%] -tracking-[0.5px] max-w-[300px] mb-2"
+              >
+                Contas digitais PJ gratuitas para decolar seu negócio!
+              </h3>
+              <p class="leading-[150%] text-white text-2xl mb-8">
+                As melhores contas para fazer pagamentos, compras e receber dos
+                seus clientes.
+              </p>
+              <div class="flex gap-4 items-center">
+                <button
+                  class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+                >
+                  SOU MEI
+                </button>
+                <button
+                  class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+                >
+                  SOU ME
+                </button>
+              </div>
+            </div>
+            <img
+              class="-mr-[31px]"
+              src="/src/assets/img/card-front-pj.svg"
+              alt=""
+            />
           </div>
         </div>
       </div>
