feat: added section depoimentos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./dist/style.css" />
     <title>Neon - codeboost</title>
   </head>
@@ -316,6 +320,129 @@
         </div>
       </div>
     </section>
+    <section class="pt-32">
+      <div class="container">
+        <div class="mb-10 flex items-end justify-between relative w-full">
+          <h2
+            class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-3 w-full"
+          >
+            Prático, fácil, moderno
+            <span
+              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem]"
+              >Você resolve tudo sem estresse 😊</span
+            >
+          </h2>
+          <div class="paginator-depoimentos relative flex !w-auto"></div>
+        </div>
+        <div class="depoimentos overflow-hidden">
+          <div class="swiper-wrapper">
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+            <div
+              class="swiper-slide w-full max-w-[38.4rem] h-[20.9rem] bg-brand-grey-1/[55%] rounded-lg pt-[3.7rem] pr-[3.2rem] pb-[2.3rem] pl-[3.2rem]"
+            >
+              <div class="flex items-center justify-between mb-[2.1rem]">
+                <strong
+                  class="font-Poppins text-brand-grey-5 font-semibold text-[1.8rem] leading-[112%] -tracking-[1px]"
+                  >@matheusguedes</strong
+                >
+                <img src="./src/assets/img/icon-twiiter.svg" alt="" />
+              </div>
+              <p
+                class="font-Inter text-[1.8rem] leading-[150%] text-brand-grey-4"
+              >
+                Valeu @banconeon! Gostei muito da embalagem e o cartão é brabo!
+                #bancoNeon
+              </p>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
     <!-- <h1
       
     >
@@ -361,5 +488,17 @@
       </button>
       
     </div> -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script>
+      var swiper = new Swiper(".depoimentos", {
+        slidesPerView: 3,
+        spaceBetween: 32,
+        pagination: {
+          el: ".paginator-depoimentos",
+          clickable: true,
+        },
+      });
+    </script>
   </body>
 </html>
