feat: added section conta digital

--- a/index.html
+++ b/index.html
@@ -443,6 +443,101 @@
         </div>
       </div>
     </section>
+
+    <section class="pt-[127px] pb-[85px]">
+      <div class="container flex items-center">
+        <div class="max-w-[542px]">
+          <h2
+            class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-[61px] w-full"
+          >
+            Aproveite<span
+              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem] mt-2"
+              >Domine o seu dinheiro com uma conta 100% digital</span
+            >
+          </h2>
+          <ul class="mb-[61px]">
+            <li class="flex items-center gap-10 mb-6">
+              <div
+                class="w-[45px] h-[45px] bg-brand-green-light rounded-lg flex items-center justify-center"
+              >
+                <img
+                  src="/src/assets/img/icon-cartao-internacional.svg"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h4
+                  class="font-Poppins text-brand-grey-4 font-medium text-[20px] leading-[112%] -tracking-[0.5px]"
+                >
+                  Cartão visa internacional
+                </h4>
+                <p class="text-[18px] leading-[150%] text-brand-grey-3">
+                  Tenha facilidades e benefícios para o seu dia a dia.
+                </p>
+              </div>
+            </li>
+            <li class="flex items-center gap-10 mb-6">
+              <div
+                class="w-[45px] h-[45px] bg-brand-green-light rounded-lg flex items-center justify-center"
+              >
+                <img src="/src/assets/img/icon-taxa-zero.svg" alt="" />
+              </div>
+              <div>
+                <h4
+                  class="font-Poppins text-brand-grey-4 font-medium text-[20px] leading-[112%] -tracking-[0.5px]"
+                >
+                  Zero mensalidade e anuidade
+                </h4>
+                <p class="text-[18px] leading-[150%] text-brand-grey-3">
+                  Não gaste grana pagando taxas desnecessárias.
+                </p>
+              </div>
+            </li>
+            <li class="flex items-center gap-10">
+              <div
+                class="w-[45px] h-[45px] bg-brand-green-light rounded-lg flex items-center justify-center"
+              >
+                <img src="/src/assets/img/icon-poupanca.svg" alt="" />
+              </div>
+              <div>
+                <h4
+                  class="font-Poppins text-brand-grey-4 font-medium text-[20px] leading-[112%] -tracking-[0.5px]"
+                >
+                  Investimento que rende mais que a poupança
+                </h4>
+                <p class="text-[18px] leading-[150%] text-brand-grey-3">
+                  Invista o seu dinheiro de maneira mais rentável.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <button
+            class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+          >
+            Abra sua conta digital
+          </button>
+        </div>
+        <div
+          class="relative w-full max-w-[712px] h-[598px] -mr-[38px] left-[125px]"
+        >
+          <img
+            class="absolute bottom-[47px] left-0"
+            src="/src/assets/img/mockup-01.svg"
+            alt=""
+          />
+          <img
+            class="absolute top-1 left-[258px]"
+            src="/src/assets/img/mockup-02.png"
+            alt=""
+          />
+          <img
+            class="absolute right-0 bottom-0"
+            src="/src/assets/img/circle-conta-digital.svg"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
     <!-- <h1
       
     >
@@ -497,6 +592,10 @@
         pagination: {
           el: ".paginator-depoimentos",
           clickable: true,
+        },
+        autoplay: {
+          delay: 5000,
+          disableOnInteraction: false,
         },
       });
     </script>
