feat: added footer

--- a/index.html
+++ b/index.html
@@ -538,6 +538,234 @@
         </div>
       </div>
     </section>
+    <footer class="bg-brand-blue pt-12">
+      <div class="container">
+        <div
+          class="flex justify-between pb-12 mb-14 border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0"
+        >
+          <img src="/src/assets/img/logo.svg" alt="" />
+          <div class="flex items-center gap-7">
+            <span
+              class="text-white text-xl leading-[125%] text-right opacity-70"
+              >Acompanhe nas redes</span
+            >
+            <ul class="flex items-center gap-7">
+              <li>
+                <a href=""><img src="/src/assets/img/youtube.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="/src/assets/img/linkedin.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="/src/assets/img/facebook.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="/src/assets/img/instagram.svg" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div
+          class="flex items-start justify-between border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0 pb-16 mb-10"
+        >
+          <nav class="w-full max-w-[860px] flex items-start justify-between">
+            <div>
+              <strong
+                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                >Produtos Neon</strong
+              >
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Cartão de crédito</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Cartão pré-pago</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Neon Mais</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Investimentos</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Empréstimos</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div>
+              <strong
+                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                >Conta digital PJ</strong
+              >
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Sou MEI</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Sou ME</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div>
+              <strong
+                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                >Blog</strong
+              >
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >#focanodinheiro</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >O poder da comunidade</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Desafio das 52 semanas</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Planilha de gastos</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div>
+              <strong
+                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                >Institucional</strong
+              >
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Conheça a Neon</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Trabalhe conosco</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Termos de uso</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Políticas de privacidade</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div>
+              <strong
+                class="font-poppins font-semibold text-2xl leading-[125%] text-white mb-6 block"
+                >Ajuda</strong
+              >
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Ouvidoria</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li class="mb-7">
+                  <a class="text-xl leading-7 text-white opacity-70" href=""
+                    >Fale conosco</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div class="w-full max-w-[280px]">
+            <button
+              class="flex items-center pl-6 mb-6 bg-[#00A5F0]/20 w-full h-[76px] rounded-md"
+            >
+              <img src="/src/assets/img/envelope.svg" alt="" />
+              <div class="ml-6">
+                <strong
+                  class="block text-left font-bold text-xl leading-[150%] text-white"
+                  >Atendimento</strong
+                >
+                <span class="block text-lg text-white/70 leading-[150%]"
+                  >oi@neon.com.br (24 horas)</span
+                >
+              </div>
+            </button>
+            <button
+              class="flex items-center pl-6 mb-6 bg-[#00A5F0]/20 w-full h-[76px] rounded-md"
+            >
+              <img src="/src/assets/img/chat.svg" alt="" />
+              <div class="ml-6">
+                <strong
+                  class="block text-left font-bold text-xl leading-[150%] text-white"
+                  >Imprensa:</strong
+                >
+                <span class="block text-lg text-white/70 leading-[150%]"
+                  >imprensa@neon.com.br</span
+                >
+              </div>
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex items-start border-solid border-4 border-brand-yellow border-r-0 border-t-0 border-l-0 pb-9"
+        >
+          <div class="text-xl">😀</div>
+          <p
+            class="w-full max-w-[660px] ml-6 text-lg leading-[150%] text-white opacity-80"
+          >
+            Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo. A
+            gente também. Por isso o time Neon está sempre trabalhando para
+            fazer a conta digital perfeita para você ;)
+          </p>
+        </div>
+      </div>
+    </footer>
     <!-- <h1
       
     >
